--- a/memory-game/package.json
+++ b/memory-game/package.json
@@ -7,11 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22.13.11",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
